# polarmine

./: .gitignore  README.md  config.py  main.py  pyproject.toml
algorithms/: association.py
polarmine/algorithms/: association.py
polarmine/datasets/: BlackFridaytrain.csv
polarmine/utils/: process.py
utils/: process.py
